update grab item dengan menggengam dan main menu working

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,7 +128,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/MainMenuMap.MainMenuMap
+EditorStartupMap=/Game/Map/BoardGameMap.BoardGameMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
