--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -127,6 +127,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="GrabKartuRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="TeleportLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="TeleportRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="MainMenuPinch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_MiddlePinch)
++ActionMappings=(ActionName="MainMenuPinch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_MiddlePinch)
 +AxisMappings=(AxisName="MovementAxisLeft_X",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
 +AxisMappings=(AxisName="GrabAxisLeft",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
 +AxisMappings=(AxisName="MovementAxisLeft_Y",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
