Final Sidang Skripsi

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,7 +7,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="D:/Package")
+StagingDirectory=(Path="D:/Package/Android_ASTC")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -89,8 +89,6 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 -IniSectionBlacklist=HordeStorageServers
 +IniSectionBlacklist=HordeStorageServers
-+MapsToCook=(FilePath="/Game/Map/MainMenuMap")
-+MapsToCook=(FilePath="/Game/Map/BoardGameMap")
 PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
