--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,7 +128,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/BoardGameMapKartuTidur.BoardGameMapKartuTidur
+EditorStartupMap=/Game/Map/MainMenuMap.MainMenuMap
 LocalMapOptions=
 TransitionMap=/Game/Map/MainMenuMap.MainMenuMap
 bUseSplitscreen=False
@@ -137,7 +137,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Map/BoardGameMapKartuTidur.BoardGameMapKartuTidur
+GameDefaultMap=/Game/Map/MainMenuMap.MainMenuMap
 ServerDefaultMap=/Game/Map/MainMenuMap.MainMenuMap
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRMainMenuMode.VRMainMenuMode_C
 GlobalDefaultServerGameMode=None
